src/test/PostWrongType/PostWrongType.expected
error: PostWrongType.panda:5:5: @postAnd may only be used in override methods; did you mean to use @post?
error: PostWrongType.panda:13:5: @post may not be used in override methods; did you mean to use @postAnd?
2 errors
