src/test/PostWrongType/PostWrongType.panda
class Super {
    function f():Int {
        return 6
    }
    @postAnd(@return > 5)
}

class Sub : Super {
    @override
    function f():Int {
        return 7
    }
    @post(@return > 6)
}